# SpeexDemo

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/yupaopao/speedxdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: SpeexProcessor.cpp  SpeexProcessor.h  native-lib.cpp  native_log.h  utils.h
app/src/main/cpp/speexdsp/: buffer.c  fftwrap.c  fftwrap.h  filterbank.c  filterbank.h  jitter.c  kiss_fft.c  kiss_fft.h  kiss_fftr.c  mdf.c  os_support.h  preprocess.c  resample.c  scal.c  smallft.c
app/src/main/cpp/speexdsp/speex/: speexdsp_types.h
app/src/main/java/com/example/speexdemo/: MainActivity.kt
app/src/main/java/com/yupaopao/speedxdemo/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
